--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -46,7 +46,10 @@ $dropdown-item-y-padding: 10px;
 $dropdown-item-x-padding: 10px;
 
 /*chat*/
+$chat-header-height: 77px;
 $chat-footer-height: 45px;
+$chat-message-height: 40px;
+$chat-width: 498px;
 $max-message-width: 85%;
 $message-width: 85%;
 $message-border-radius: 15px;
